# ophix-task-systemd

./: .gitignore  README.md  gen_version.py  pyproject.toml
src/ophix_task_systemd/: _version.py  cli.py  core.py
